test/files/neg/badtok-1.scala
// bug 989
'42'
