test/files/neg/badtok-1.check
badtok-1.scala:2: error: unclosed character literal
'42'
^
badtok-1.scala:2: error: unclosed character literal
'42'
   ^
two errors found
